--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <%= link_to "ログアウト", destroy_end_user_session_path, method: :delete, class: 'glyphicon glyphicon-log-out' %>
   <% elsif admin_signed_in? %>
     <%= link_to "受付一覧", "#", class: 'glyphicon glyphicon-log-out' %>
-    <%= link_to "カート一覧", "#", class: 'glyphicon glyphicon-log-out' %>
+    <%= link_to "商品登録", new_admin_item_path, class: 'glyphicon glyphicon-log-out' %>
     <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'glyphicon glyphicon-log-out' %>
   <% else %>
     <%= link_to "エンドユーザーログイン", new_end_user_session_path, class: 'glyphicon glyphicon-home' %>
