--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,2 +1,6 @@
-<h1>Public::Items#show</h1>
-<p>Find me in app/views/public/items/show.html.erb</p>
+<h3><%= @item.name %></h3>
+<span>値段: <%= @item.price %> 円</span>
+<%= form_for(@cart_item, url: public_cart_items_path(:item_id => @item.id)) do |f| %>
+  <%= f.number_field :amount, min:1, :class => 'number_field' %>
+  <%= f.submit 'カートに追加' %>
+<% end %>
