[finish] 5_feature_orders

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,3 +22,14 @@
 .existing {
     color: red;
 }
+
+.pre-container {
+    width: auto;
+    height: auto;
+    border: solid 1px black;
+}
+
+.uzi {
+    font-weight: bold;
+    font-size: 1.17em;
+}
