--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,17 +11,18 @@
 
   <header>
   <% if end_user_signed_in? %>
-    <%= link_to "マイページ", public_end_user_path(current_end_user), class: 'glyphicon glyphicon-log-out' %>
-    <%= link_to "カート一覧", public_cart_items_path, class: 'glyphicon glyphicon-log-out' %>
-    <%= link_to "ログアウト", destroy_end_user_session_path, method: :delete, class: 'glyphicon glyphicon-log-out' %>
-  <% elsif admin_signed_in? %>
-    <%= link_to "受付一覧", "#", class: 'glyphicon glyphicon-log-out' %>
-    <%= link_to "商品登録", new_admin_item_path, class: 'glyphicon glyphicon-log-out' %>
-    <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'glyphicon glyphicon-log-out' %>
-  <% else %>
-    <%= link_to "エンドユーザーログイン", new_end_user_session_path, class: 'glyphicon glyphicon-home' %>
-    <%= link_to "エンドユーザ会員登録", new_end_user_registration_path, class: 'glyphicon glyphicon-edit' %>
-  <% end %>
+      <%= link_to "マイページ", public_end_user_path(current_end_user) %>
+      <%= link_to "カート一覧", public_cart_items_path %>
+      <%= link_to "ログアウト", destroy_end_user_session_path, method: :delete %>
+    <% elsif admin_signed_in? %>
+      <%= link_to "受注一覧", admin_orders_path %>
+      <%= link_to "商品登録", new_admin_item_path %>
+      <%= link_to "(ジャンル管理画面)", admin_genres_path %>
+      <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
+    <% else %>
+      <%= link_to "エンドユーザーログイン", new_end_user_session_path %>
+      <%= link_to "エンドユーザ会員登録", new_end_user_registration_path %>
+    <% end %>
   </header>
 
   <body>
