--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,10 @@
       <%= link_to "マイページ", public_end_user_path(current_end_user) %>
       <%= link_to "カート一覧", public_cart_items_path %>
       <%= link_to "ログアウト", destroy_end_user_session_path, method: :delete %>
+      <% form_tag(public_items_path,:method => 'get') do %>
+        <%= text_field_tag :search %>
+        <%= submit_tag 'Search', :name => nil %>
+      <% end %>
     <% elsif admin_signed_in? %>
       <%= link_to "受注一覧", admin_orders_path %>
       <%= link_to "商品登録", new_admin_item_path %>
