--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -56,4 +56,5 @@
   <tbody>
 </table>
 
-<%= link_to "注文を確定する", public_orders_path, :method => :post%>
+<%= link_to "注文を確定する", public_orders_path, :method => :post %> | 
+<%= link_to "詳細を選択し直す", new_public_order_path %>
