--- a/app/views/admin/end_users/index.html.erb
+++ b/app/views/admin/end_users/index.html.erb
@@ -1,24 +1,29 @@
-<h1>Admin::EndUsers#index</h1>
-<p>Find me in app/views/admin/end_users/index.html.erb</p>
-<table>
-  <thead>
-    <tr>
-      <th>名前</th>
-      <th>メールアドレス</th>
-      <th>ステータス</th>
-    </tr>
-  </thead>
-  <% @end_users.each do |end_user| %>
-    <tbody>
-      <tr>
-        <td><%= end_user.last_name %> <%= end_user.first_name %></td>
-        <td><%= end_user.email %></td>
-        <% unless end_user.deleted_at? %>
-          <td></td>
-        <% else %>
-          <td>退会済み</td>
-        <% end %>
-      </tr>
-    </tbody>
-  <% end %>
-</table>
+<div class="row">
+  <h3><strong>会員一覧画面</strong></h3>
+  <div class="col-xs-8 col-xs-offset-2">
+    <table class="table">
+      <thead>
+        <tr class="active">
+          <th>会員ID</th>
+          <th>氏名</th>
+          <th>メールアドレス</th>
+          <th>ステータス</th>
+        </tr>
+      </thead>
+      <% @end_users.each do |end_user| %>
+        <tbody>
+          <tr>
+            <td><%= end_user.id %></td>
+            <td><%= link_to end_user.last_name + end_user.first_name, admin_end_user_path(end_user) %></td>
+            <td><%= end_user.email %></td>
+            <% unless end_user.deleted_at? %>
+              <td>有効</td>
+            <% else %>
+              <td>退会済</td>
+            <% end %>
+          </tr>
+        </tbody>
+      <% end %>
+    </table>
+  </div>
+</div>
