--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,11 +1,24 @@
-<h1>ジャンル編集画面</h1>
-<%= form_for(@genre, url: admin_genre_path(@genre)) do |f| %>
-  <span>ジャンル名</span><br>
-  <%= f.text_field :name %><br>
-  <span>表示ステータス</span><br>
-  <%= f.radio_button :status, :有効 %>
-  <span>有効</span>
-  <%= f.radio_button :status, :無効 %>
-  <span>無効</span><br>
-  <%= f.submit '更新' %>
-<% end %>
+<div class="row">
+  <h3><strong>ジャンル追加・一覧画面</strong></h3>
+  <div class="col-xs-11">
+  <%= form_for(@genre, url: admin_genres_path) do |f| %>
+    <div class="form-group">
+      <label class="col-xs-1 control-label" style="padding-top: 8px;">ジャンル</label>
+      <div class="col-xs-2">
+        <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control" %>
+      </div>
+      <div class="col-xs-1" style="padding-top: 8px;">
+        <%= f.radio_button :status, :有効 %>
+        <span><strong>有効</strong></span>
+      </div>
+      <div class="col-xs-1" style="padding-top: 8px;">
+        <%= f.radio_button :status, :無効 %>
+        <span><strong>無効</strong></span>
+      </div>
+      <div class="col-xs-1" style="padding-top: 3px;">
+        <%= f.submit "変更を保存する", class: "btn btn-info" %>
+      </div>
+    </div>
+  <% end %>
+  </div>
+</div>
