--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,31 +1,50 @@
-<h1>ジャンル一覧</h1>
-<table>
-  <thead>
-    <tr>
-      <th>ジャンル名</th>
-      <th>表示ステータス</th>
-      <th></th>
-    </tr>
-  </thead>
-  <% @genres.each do |genre| %>
-    <tbody>
-      <tr>
-        <td><%= genre.name %></td>
-        <td><%= genre.status %></td>
-        <td><%= link_to "編集", edit_admin_genre_path(genre) %></td>
-      </tr>
-    </tbody>
+<div class="row">
+  <h3><strong>ジャンル追加・一覧画面</strong></h3>
+  <div class="col-xs-11">
+  <%= form_for(@genre, url: admin_genres_path) do |f| %>
+    <div class="form-group">
+      <label class="col-xs-1 control-label" style="padding-top: 8px;">ジャンル</label>
+      <div class="col-xs-2">
+        <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control" %>
+      </div>
+      <div class="col-xs-1" style="padding-top: 8px;">
+        <%= f.radio_button :status, :有効 %>
+        <span><strong>有効</strong></span>
+      </div>
+      <div class="col-xs-1" style="padding-top: 8px;">
+        <%= f.radio_button :status, :無効 %>
+        <span><strong>無効</strong></span>
+      </div>
+      <div class="col-xs-1" style="padding-top: 3px;">
+        <%= f.submit "追加", class: "btn btn-info" %>
+      </div>
+    </div>
   <% end %>
-</table>
-
-<h1>ジャンル登録</h1>
-<%= form_for(@genre, url: admin_genres_path) do |f| %>
-  <span>ジャンル名</span><br>
-  <%= f.text_field :name %><br>
-  <span>表示ステータス</span><br>
-  <%= f.radio_button :status, :有効 %>
-  <span>有効</span>
-  <%= f.radio_button :status, :無効 %>
-  <span>無効</span><br>
-  <%= f.submit '登録' %>
-<% end %>
+  </div>
+</div>
+<div class="row" style="margin-top: 50px;">
+  <div class="col-xs-4">
+    <table class="table">
+      <thead>
+        <tr class="active">
+          <th>ジャンル</th>
+          <th>状態</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @genres.each do |genre| %>
+          <tr>
+            <td><%= genre.name %></td>
+            <% if genre.status == true %>
+              <td>有効</td>
+            <% else %>
+              <td>無効</td>
+            <% end %>
+            <td><%= link_to "編集する", edit_admin_genre_path(genre), class: "btn btn-sm btn-info" %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
