--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,23 +1,32 @@
-<h2>商品一覧</h2>
-<table>
-  <thead>
-    <tr>
-      <th>商品名</th>
-      <th>値段</th>
-      <th>ジャンル</th>
-      <th>販売ステータス</th>
-      <th></th>
-    </tr>
-  </thead>
-  <% @items.each do |item| %>
-    <tbody>
-      <tr>
-        <td><%= item[1].name %></td>
-        <td><%= item[1].price %> 円</td>
-        <td><%= item[0] %></td>
-        <td><%= item[1].status %></td>
-        <td><%= link_to "編集", edit_admin_item_path(item[1]) %></td>
+<div class="row">
+  <div class="col-xs-3">
+    <h3><strong>商品一覧画面</strong></h3>
+  </div>
+  <div class="col-xs-2 col-xs-offset-7">
+    <%= link_to "", new_admin_item_path, class: "glyphicon glyphicon-plus-sign", style: "color: black; font-size: 40px; text-decoration: none; margin-top: 10px;" %>
+  </div>
+  <div class="col-xs-10 col-xs-offset-1">
+  <table class="table">
+    <thead>
+      <tr class="active">
+        <th>商品ID</th>
+        <th>商品名</th>
+        <th>税別価格</th>
+        <th>ジャンル</th>
+        <th>ステータス</th>
       </tr>
-    </tbody>
-  <% end %>
-</table>
+    </thead>
+    <% @items.each do |item| %>
+      <tbody>
+        <tr>
+          <td><%= item.id %></td>
+          <td><u><%= link_to item.name, admin_item_path(item) %></u></td>
+          <td>¥<%= item.price %></td>
+          <td><%= item.genre.name %></td>
+          <td><%= item.status %></td>
+        </tr>
+      </tbody>
+    <% end %>
+  </table>
+
+</div>
