--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,2 +1,38 @@
-<h1>Admin::Items#show</h1>
-<p>Find me in app/views/admin/items/show.html.erb</p>
+<div class="row">
+  <h3><strong>商品詳細画面</strong></h3>
+  <div class="row">
+    <div class="col-xs-4">
+      <%= attachment_image_tag @item, :item_image, :fill, 60, 60, fallback: "no-image.png" %>
+    </div>
+
+    <div class="col-xs-4">
+      <table>
+        <tr>
+          <td class="col-xs-5"><p>商品名</p></td>
+          <td class="col-xs-7"><p><%= @item.name %></p></td>
+        </tr>
+        <tr>
+          <td class="col-xs-5"><p>商品説明</p></td>
+          <td class="col-xs-7"><p><%= @item.description %></p></td>
+        </tr>
+        <tr>
+          <td class="col-xs-5"><p>ジャンル</p></td>
+          <td class="col-xs-7"><p><%= @item.genre.name %></p></td>
+        </tr>
+        <tr>
+          <td class="col-xs-5"><p>税込価格</p></td>
+          <td class="col-xs-7"><p><%= @item.price %></p></td>
+        </tr>
+        <tr>
+          <td class="col-xs-5"><p>販売ステータス</p></td>
+          <td class="col-xs-7"><p><%= @item.status %></p></td>
+        </tr>
+      </table>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-2 col-xs-offset-9">
+      <%= link_to '編集する', edit_admin_item_path(@item), class: "btn btn-lg btn-block btn-info" %>
+    </div>
+  </div>
+</div>
