--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,29 +1,25 @@
-<h3>受注一覧</h3>
-<table>
-  <thead>
-    <tr>
-      <th>注文者名(id)</th>
-      <th>合計金額</th>
-      <th>送料</th>
-      <th>受取人氏名</th>
-      <th>郵便番号</th>
-      <th>住所</th>
-      <th>注文ステータス</th>
-      <th></th>
-    </tr>
-  </thead>
-  <% @orders.each do |order| %>
-    <tbody>
-      <tr>
-        <td><%= order[0] %>(<%= order[1].end_user_id %>)</td>
-        <td><%= order[1].total_price %> 円</td>
-        <td><%= order[1].postage %> 円</td>
-        <td><%= order[1].recipient_name %></td>
-        <td><%= order[1].postal_code %></td>
-        <td><%= order[1].address %></td>
-        <td><%= order[1].status %></td>
-        <td><%= link_to "注文詳細へ", admin_order_path(order[1]) %>
-      </tr>
-    </tbody>
-  <% end %>
-</table>
+<div class="row">
+  <h3><strong>注文一覧画面</strong></h3>
+  <div class="col-xs-8 col-xs-offset-2">
+    <table class="table">
+      <thead>
+        <tr class="active">
+          <th>購入日時</th>
+          <th>購入日</th>
+          <th>注文個数</th>
+          <th>注文ステータス</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @orders.each do |order| %>
+          <tr>
+            <td><%= link_to order.created_at, admin_order_path(order) %></td>
+            <td><%= order.end_user.last_name + order.end_user.first_name %></td>
+            <td><%= order.order_details.sum(:amount) %></td>
+            <td><%= order.status %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
