--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,57 +1,116 @@
-<h2>注文詳細画面</h2>
-<% if flash[:update] %>
-  <%= flash[:update] %>
-<% end %>
-<h3>注文詳細</h3>
-<table>
-  <thead>
-    <tr>
-      <th>商品名</th>
-      <th>数量</th>
-      <th>小計</th>
-      <th colspan="2">製作ステータス</th>
-    </tr>
-  </thead>
-  <% @order_details.each do |order_detail| %>
-    <tbody>
-      <tr>
-        <td><%= order_detail[0] %>(<%= order_detail[1].item_id %>)(<%= order_detail[1].id %>)</td>
-        <td><%= order_detail[1].amount %> 個</td>
-        <td><%= order_detail[1].subtotal %> 円</td>
-        <td>
-          <%= order_detail[1].status %>
-        </td>
-        <td>
-          <%= form_with model: order_detail[1], url: admin_order_path(order_detail[1].id) do |f| %>
-              <br><%= f.radio_button :status, :着手不可 %>
-              <span>着手不可</span>
-              <br><%= f.radio_button :status, :製作待ち %>
-              <span>製作待ち</span>
-             <br><%= f.radio_button :status, :製作中 %>
-              <span>製作中</span>
-              <br><%= f.radio_button :status, :製作完了 %>
-              <span>製作完了</span>
-            <br><%= f.submit '更新' %>
-          <% end %>
-        </td>
-      </tr>
-    </tbody>
+<div class="row">
+  <h3><strong>注文詳細画面</strong></h3>
+  <% if flash[:notice] %>
+    <div class="col-xs-6">
+      <div class="info alert-info">
+        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true">
+          <span class="lead"><%= flash[:notice] %></span>
+        </span>
+      </div>
+    </div>
   <% end %>
-</table>
-<h3>配送ステータス</h3>
-
-<%= form_with model: @order, url: admin_delivery_path(@order.id) do |f| %>
-  <%= f.radio_button :status, :入金待ち %>
-  <span>入金待ち</span>
-  <%= f.radio_button :status, :入金確認 %>
-  <span>入金確認</span>
-  <%= f.radio_button :status, :製作中 %>
-  <span>製作中</span>
-  <%= f.radio_button :status, :発送準備中 %>
-  <span>発送準備中</span>
-  <%= f.radio_button :status, :発送済み %>
-  <span>発送済み</span><br>
-  <%= f.submit '更新' %>
-<% end %>
-
-<%= link_to "受注一覧へ", admin_orders_path %>
+  <div class="col-xs-6 col-xs-offset-1">
+    <div class="row">
+      <div class="col-xs-4">
+        <h4><strong>購入者</strong></h4>
+      </div>
+      <div class="col-xs-8">
+        <h4><u><%= link_to @order_name, admin_end_user_path(@order) %></u></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-4">
+        <h4><strong>配送先</strong></h4>
+      </div>
+      <div class="col-xs-8">
+        <h4>
+          〒<%= @order.postal_code %>
+           <%= @order.address %>
+          <br><%= @order.recipient_name %>
+        </h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-4">
+        <h4><strong>支払方法</strong></h4>
+      </div>
+      <div class="col-xs-8">
+        <h4><%= @order.payment_way %></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-4">
+        <h4><strong>注文ステータス</strong></h4>
+      </div>
+      <div class="col-xs-8" style="margin-top: 5px;">
+        <%= form_for(@order, url: admin_delivery_path(@order)) do |f| %>
+          <div class="col-xs-5">
+            <%= f.select :status, Order.statuses.keys, { include_blank: @order.status }, class: "form-control" %>
+          </div>
+          <div class="col-xs-4">
+            <%= f.submit "更新", class: "btn btn-info" %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row" style="padding-top: 50px;">
+  <div class="col-xs-7">
+    <table class="table">
+      <thead>
+        <tr class="active">
+          <th>商品名</th>
+          <th>単価(税込)</th>
+          <th>数量</th>
+          <th>小計</th>
+          <th colspan="2">製作ステータス</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @order.order_details.each do |order_detail| %>
+          <tr>
+            <td><%= order_detail.item.name %></td>
+            <td>¥<%= order_detail.item.price %></td>
+            <td><%= order_detail.amount %></td>
+            <td>¥<%= order_detail.subtotal %></td>
+            <%= form_with model: order_detail, url: admin_order_path(order_detail) do |f| %>
+              <td>
+                <%= f.select :status, OrderDetail.statuses, { include_blank: order_detail.status }, class: "form-control"%>
+              </td>
+              <td>
+                <%= f.submit "更新", class: "btn btn-info" %>
+              </td>
+            <% end %>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  <div class="col-xs-3 col-xs-offset-2">
+    <div class="row">
+      <div class="col-xs-6">
+        <h4><strong>商品合計</strong></h4>
+      </div>
+      <div class="col-xs-6">
+        <h4><%= @order.total_price - @order.postage %>円</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-6">
+        <h4><strong>送料</strong></h4>
+      </div>
+      <div class="col-xs-6">
+        <h4><%= @order.postage %>円</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-6">
+      <h4><strong>請求金額合計</strong></h4>
+      </div>
+      <div class="col-xs-6">
+        <h4><strong><%= @order.total_price %>円</strong></h4>
+      </div>
+    </div>
+  </div>
+</div>
