--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,27 +9,39 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <header>
-  <% if end_user_signed_in? %>
-      <%= link_to "マイページ", public_end_user_path(current_end_user) %>
-      <%= link_to "カート一覧", public_cart_items_path %>
-      <%= link_to "ログアウト", destroy_end_user_session_path, method: :delete %>
-      <%= form_tag(public_items_path, :method => 'get') do %>
-        <%= autocomplete_field_tag 'item[name]', nil, public_items_path %>
-        <%= submit_tag '商品検索', :name => nil %>
-      <% end %>
-    <% elsif admin_signed_in? %>
-      <%= link_to "受注一覧", admin_orders_path %>
-      <%= link_to "商品登録", new_admin_item_path %>
-      <%= link_to "(ジャンル管理画面)", admin_genres_path %>
-      <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
-    <% else %>
-      <%= link_to "エンドユーザーログイン", new_end_user_session_path %>
-      <%= link_to "エンドユーザ会員登録", new_end_user_registration_path %>
-    <% end %>
-  </header>
+  <body style="padding-top:70px;">
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <h2>LOGO</h2>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <% if end_user_signed_in? %>
+              <li><%= link_to "マイページ", public_end_user_path(current_end_user) %></li>
+              <li><%= link_to "カート一覧", public_cart_items_path %></li>
+              <li><%= link_to "ログアウト", destroy_end_user_session_path, method: :delete %></li>
+              <%= form_tag(public_items_path, :method => 'get') do %>
 
-  <body>
-    <%= yield %>
+                <li><%= autocomplete_field_tag 'item[name]', nil, public_items_path, autocomplete: true %></li>
+                <li><%= submit_tag '商品検索', :name => nil %></li>
+              <% end %>
+            <% elsif admin_signed_in? %>
+              <li><%= link_to "受注一覧", admin_orders_path %></li>
+              <li><%= link_to "商品登録", new_admin_item_path %></li>
+              <li><%= link_to "(ジャンル管理画面)", admin_genres_path %></li>
+              <li><%= link_to "ログアウト", destroy_admin_session_path, method: :delete %></li>
+            <% else %>
+              <li><%= link_to "エンドユーザーログイン", new_end_user_session_path %></li>
+              <li><%= link_to "エンドユーザ会員登録", new_end_user_registration_path %></li>
+            <% end %>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+	  <div class="container">
+      <%= yield %>
+	  </div>
   </body>
 </html>
